# craft-gui

./: .gitignore  LICENSE  README.md  biome.json  index.html  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: lint-rs.yml
docs/: APP_DATA_MANAGEMENT_SYSTEM.md  README.md  README.zh.md  ROUTER_SYSTEM.md  ROUTE_METADATA.md  SCHEMA_API_FORM.md  SCHEMA_DATA_FORM.md  SCHEMA_DATA_FORM.zh.md  SCHEMA_FIELD.md  SCHEMA_FIELD.zh.md  SCHEMA_SYSTEM_IMPLEMENTATION.md
src/: App.vue  main.ts  quasar_extras.ts  theme.ts
src-tauri/: Cargo.toml  rustc-ice-2025-08-14T16_03_03-94471.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: appdata.rs  config.rs  lib.rs  logger.rs  main.rs  test.rs  utils.rs
src-tauri/src/config/: apppath.rs  data.rs  mod.rs
src-tauri/src/storage/: appdata.rs  mod.rs  rawentity.rs  sled.rs  sqlite.rs
src/app/: layout.tsx  not-found.tsx  page.tsx
src/app/about/: page.tsx
src/app/api/chat/: route.ts
src/app/dashboard/: page.tsx
src/components/: ConfigEditor.vue  Copyright.tsx  Greet.tsx  Hello.vue  ModeSwitch.tsx  MyAssistant.tsx  Navbar.tsx  ProTip.tsx  RoundedButton.tsx  TextDiffDialog.vue  TimeNow.tsx  app-sidebar.tsx
src/components/config/: ConfigEditor.vue  ConfigField.vue
src/components/schemaform/: README.md  SchemaApiForm.vue  SchemaDataForm.vue  SchemaField.vue  SchemaForm.vue  circular-chain-test.ts  debug-ref-chain.ts  field-name-test.ts  field-path-verification-test.ts  full-path-resolution-tests.ts  full-path-tests.ts  layout-styles.css  layout-utils.ts  multiple-ref-test.ts  ref-path-resolver.ts  types.ts
src/components/ui/: sidebar.tsx
src/composables/: route.ts  useCurrentRoute.ts  useGlobalRouter.ts  useGlobalState.ts  useNavigation.ts  useRouteManager.ts
src/pages/: 001.index.vue  002.dashboard.vue  003.rustcall.vue  004.appdata-demo.vue  997.about.vue  999.route-map.vue  AboutPage.vue  debug-routes.vue  hidden-page.vue  index.vue  router-map.vue  user-profile.vue
src/pages/01.rustcall/: 003.rustcall.vue
src/pages/99.settings/: 997.apppaths.vue  998.settings.vue  999.route-map.vue
src/pages/admin/: 010.admin-home.vue  index.vue
src/pages/admin/reports/: 020.analytics.vue  analytics.vue
src/pages/test/: nested.vue
src/router/: auto-routes.ts
src/styles/: globals.css
src/types/: path-resolver.ts  route-meta.ts  schema.ts  tauri-api.d.ts  vite-env.d.ts
src/utils/: app-config.ts  auto-routes.ts  cleanup.ts  clipboard-example.ts  clipboard-permissions.ts  clipboard-test.ts  clipboard.ts  debug.ts  deep-clone.ts  global-router.ts  schema-constants.ts  schema-utils.ts  schema-validator.ts  tauri-commands.ts  ui-constants.ts
src/views/: AboutPage.vue  dashboard.vue  rustcall.vue  settings.vue  user-profile.vue
src/views/admin/: settings.vue  users.vue
